--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,20 @@
 .Row {
    display: flex;
 }
+
+.carousel {
+   position: absolute !important;
+   top: 0;
+   z-index: -1;
+   width: 100%;
+}
+.subCarousel {
+   position: relative !important;
+   z-index: 0 !important;
+}
+
+.Center {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
