--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,3 +18,24 @@
    justify-content: center;
    align-items: center;
 }
+
+a {
+   color: white !important;
+}
+
+a:hover {
+   text-decoration: none !important;
+   color: lightgray !important;
+}
+
+.Introduce .Center {
+   transition: 1s;
+   background-size: cover;
+   height: 100%;
+   color: #fff;
+   cursor: auto;
+}
+.Introduce .InnerText {
+   text-align: center;
+   padding: 0 20%;
+}
