--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,6 +14,7 @@
 }
 
 .Center {
+   height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -59,4 +60,8 @@ a:hover {
    display: flex;
    flex-direction: row;
    justify-content: center;
+}
+
+.fullHeight {
+   height: 100%;
 }
