--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,6 +16,7 @@
 .Center {
    height: 100%;
    display: flex;
+   flex-direction: column;
    justify-content: center;
    align-items: center;
 }
