--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,83 +1,95 @@
 .Row {
-   display: flex;
+  display: flex;
 }
 
 .carousel {
-   position: absolute !important;
-   top: 0;
-   z-index: -1;
-   width: 100%;
+  position: absolute !important;
+  top: 0;
+  z-index: -1;
+  width: 100%;
 }
 .subCarousel {
-   position: relative !important;
-   z-index: 0 !important;
+  position: relative !important;
+  z-index: 0 !important;
 }
 
 .Center {
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 a {
-   color: white !important;
+  color: white !important;
 }
 
 a:hover {
-   text-decoration: none !important;
-   color: lightgray !important;
+  text-decoration: none !important;
+  color: lightgray !important;
 }
 
 .Introduce .Center {
-   transition: 1s;
-   background-size: cover;
-   height: 100%;
-   color: #fff;
-   cursor: auto;
+  transition: 1s;
+  background-size: cover;
+  height: 100%;
+  color: #fff;
+  cursor: auto;
 }
 .Introduce .InnerText {
-   text-align: center;
-   padding: 0 20%;
+  text-align: center;
+  padding: 0 20%;
 }
 
 .Introduce li {
-   border-radius: 20px;
-   background: #ffffff;
-   box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+  border-radius: 20px;
+  background: #ffffff;
+  box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
 
-   padding: 10px;
-   border: 1px solid lightgray;
-   margin-bottom: 10px;
-   list-style: none;
+  padding: 10px;
+  border: 1px solid lightgray;
+  margin-bottom: 10px;
+  list-style: none;
 }
 .inner10 {
-   margin-left: 10%;
-   margin-right: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .Gongmojeon {
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .fullHeight {
-   height: 100%;
+  height: 100%;
 }
 
 .FAB {
-   position: fixed;
-   z-index: 10;
-   bottom: 30px;
-   left: 30px;
+  position: fixed;
+  z-index: 10;
+  bottom: 30px;
+  left: 30px;
 }
 
 .LeftMenu {
-   margin: 20px;
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
+  margin: 20px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.w1 {
+  width: 100%;
+}
+
+.padding20 {
+  padding: 20px;
+}
+
+.margin0 {
+  margin: 0px !important;
 }
