update 팀목록/피드백 Button Fixed

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -108,3 +108,20 @@ a:hover {
 .feedback {
   width: 100%;
 }
+
+.Bottom {
+  background-color: white;
+  bottom: 10px;
+}
+
+.fixed-r30 {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+}
+
+.fixed-r60 {
+  position: fixed;
+  right: 30px;
+  bottom: 90px;
+}
