update 회의록 realtime

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -138,3 +138,8 @@ a:hover {
   position: absolute;
   top: 100px;
 }
+
+.Bottom > .buttons {
+  display: flex;
+  justify-content: space-between;
+}
