--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,23 @@
 .Row {
   display: flex;
 }
-
+.Center.CardInnerText {
+  color: white;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+}
+.Center .InnerText {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(65, 65, 65, 0.5);
+  border-radius: 20px;
+  width: 100%;
+  height: 200px;
+}
 .carousel {
   position: absolute !important;
   top: 0;
@@ -36,10 +52,6 @@ a:hover {
   height: 100%;
   color: #fff;
   cursor: auto;
-}
-.Introduce .InnerText {
-  text-align: center;
-  padding: 0 20%;
 }
 
 .Introduce li {
