--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,15 +37,6 @@
   align-items: center;
 }
 
-a {
-  color: white !important;
-}
-
-a:hover {
-  text-decoration: none !important;
-  color: lightgray !important;
-}
-
 .Introduce .Center {
   transition: 1s;
   background-size: cover;
@@ -86,13 +77,7 @@ a:hover {
   left: 30px;
 }
 
-.LeftMenu {
-  margin: 20px;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
+.LeftMenu,
 .RightMenu {
   margin: 20px;
   height: 100%;
@@ -179,4 +164,8 @@ a:hover {
   top: 10px;
   z-index: 1300;
   background-color: white;
+}
+
+.content {
+  height: 100%;
 }
