--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,8 +5,27 @@ $default-color: #eeeeee;
 
 .root {
   transition: 0.2s;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    color: $main-color;
+  }
 }
 
+.Center {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  p {
+    color: $default-color;
+  }
+}
 .CommonNavbar {
   background-color: $main-color;
   position: fixed;
@@ -48,9 +67,47 @@ a {
   display: block !important;
 }
 
+.ActivityWrapper {
+}
+
+.BackgroundAnimation {
+  opacity: 0.5;
+  position: absolute;
+  bottom: 0px;
+  height: 100%;
+  z-index: -1;
+}
+
 .ActivityHeader {
+  position: relative;
   padding: 20px;
+  color: white;
+}
+
+.ActivityTabs {
 }
 
 .ActivityBody {
+  padding-left: 20px;
+  & .BodyRoot {
+    background-color: transparent !important;
+  }
+  & .MuiCard-root {
+    position: relative;
+    top: 0;
+    transition: top ease 0.3s;
+
+    &:hover {
+      top: -10px;
+    }
+  }
+}
+
+.TeamCard {
+  max-width: 100%;
+  height: 300px;
+  padding-left: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
