update 팀원추가/회의록작성 권한 부여

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,15 @@ $default-color: #eeeeee;
   p {
     color: $default-color;
   }
+
+  & .RegisterForm {
+    display: flex;
+    flex-direction: column;
+    p {
+      opacity: 0.5;
+      color: $main-color;
+    }
+  }
 }
 .CommonNavbar {
   background-color: $main-color;
