--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -115,7 +115,7 @@ a {
 .TeamCard {
   max-width: 100%;
   height: 300px;
-  padding-left: 10%;
+  padding: 0 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -167,5 +167,15 @@ a {
   display: flex;
   &.Space-between {
     justify-content: space-between;
+  }
+  &.vertical-center {
+    align-items: center;
+  }
+}
+
+.FeedbackDetail {
+  width: 100%;
+  & .FeedbackDetailBottom {
+    float: right;
   }
 }
