update 예정 출석 일정 불러오기

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -224,3 +224,7 @@ a {
 .Chip-Absent {
   background-color: $secondary-color !important;
 }
+.Attend-Accordion {
+  width: 100%;
+  margin-bottom: 10px;
+}
