--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,19 @@ $subMain-color: #393e46;
 $secondary-color: #00adb5;
 $default-color: #eeeeee;
 
+@mixin Row {
+  display: flex;
+  &.Space-Between {
+    justify-content: space-between;
+  }
+  &.Vertical-Center {
+    align-items: center;
+  }
+  & .Schedule-Add-Button {
+    padding: 0px 15px !important;
+  }
+}
+
 .root {
   transition: 0.2s;
   h1,
@@ -161,18 +174,8 @@ a {
 .LeftDrawer > div > div {
   width: 25%;
 }
-
 .Row {
-  display: flex;
-  &.Space-Between {
-    justify-content: space-between;
-  }
-  &.Vertical-Center {
-    align-items: center;
-  }
-  & .Schedule-Add-Button {
-    padding: 0px 15px !important;
-  }
+  @include Row;
 }
 
 .FeedbackDetail {
