update 출석인원 프리셋 저장

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -256,3 +256,9 @@ a {
     margin: 3px;
   }
 }
+
+.Preset-textField {
+  padding: 5px;
+  border: 0px;
+  border-bottom: 1px $main-color solid;
+}
